# survey-redirect

./: .gitignore  Cargo.toml  README.md  config.yaml  gen_certs.sh  tests.py
.circleci/: config.yml
scripts/: gen_token.py
sdk/: survey_redirect.py  test.py
src/: certs.rs  config.rs  handler.rs  main.rs  server.rs  state.rs  utility.rs
