[package]
name = "survey-redirect"
version = "0.3.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
axum = { version = "0.6", default-features = false, features = [
    "json",
    "tokio",
    "query",
    "http1",
] }
axum-server = { version = "0.5", default-features = false, features = [
    "tls-rustls",
] }
chrono = { version = "0", default-features = false, features = ["clock"] }
config = { version = "0", default-features = false, features = ["yaml"] }
rand = "0"
serde = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "parking_lot",
] }
tower = "0.4"
tower-http = { version = "0.4", features = [
    "auth",
    "timeout",
    "decompression-gzip",
    "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "chrono",
    "parking_lot",
] }
url = { version = "2.4", features = ["serde"] }
