[package]
name = "survey-redirect"
version = "0.4.2"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
axum = { version = "0.7", default-features = false, features = [
    "json",
    "tokio",
    "query",
    "http1",
] }
chrono = { version = "0", default-features = false, features = ["clock"] }
config = { version = "0", default-features = false, features = ["yaml"] }
futures = { version = "0", default-features = false }
hyper = { version = "1", default-features = false, features = ["http1"] }
hyper-util = { version = "0.1", default-features = false, features = [
    "server",
    "http1",
    "tokio",
] }
notify = { version = "6", default-features = false, features = [
    "macos_kqueue",
] }
rand = "0"
rustls-pemfile = "2"
serde = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "parking_lot",
    "signal",
] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = [
    "auth",
    "timeout",
    "decompression-gzip",
    "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
    "chrono",
    "parking_lot",
] }
url = { version = "2", default-features = false, features = ["serde"] }
